--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,4 +1,4 @@
 <h2>Parent Component</h2>
 
-<a [routerLink]="['/children', child.id]" 
+<a [routerLink]="['/child', child.id]" 
 [state]="{ name: child.name }">Child</a>
