2 files modified, 3 added, 3 deleted

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['/child', child.id]" [state]="{ name: child.name }">Child</a>
+<a [routerLink]="['/children', child.id]" [state]="{ name: child.name }">Child</a>
 <h2>Products</h2>
 
 <div *ngFor="let product of products">
