--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,2 +1,2 @@
 <br />
-<a [routerLink]="['/child']" [queryParams]="{ id: 1, name: 'Rajanya' }">Child</a>
+<a [routerLink]="['/child']" [queryParams]="{ id: id, name: name }">Child</a>
