--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,20 @@
 <app-top-bar></app-top-bar>
+<table>
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Email</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let user of users">
+      <td>{{ user.id }}</td>
+      <td>{{ user.name }}</td>
+      <td>{{ user.email }}</td>
+    </tr>
+  </tbody>
+</table>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
