--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <br />
-<app-child (nameChange) = "onNameChange($event)" (idChange) = "onIdChange($event)"></app-child>
-<a [routerLink]="['/child']" [queryParams]="{ id: id, name: name }">Child</a>
+<!--<app-child (nameChange) = "onNameChange($event)" (idChange) = "onIdChange($event)"></app-child>
+<a [routerLink]="['/child']" [queryParams]="{ id: id, name: name }">Child</a>-->
 
 <!--<app-child
   [name]="name"
